# ultradino-preterm

./: .gitmodules  EHR.py  README.md  ehr_outer.py  get_stats.py  manual_check.py  model_loader.py  preprocess.py  test.py  train.py
EHR_extract/: custom_find_functions.py  extract.py  split_data.py  utils.py
Scripts/: calc_stats_joris.py
bias_analysis/: bias_analysis.py
confs/: Bias_analysis.yaml  Population.yaml  Population_test.yaml  Preprocessing.yaml  Preprocessing_test.yaml  append_tokens_vitb16.yaml  tbd.yaml
dataloader/: dataloader.py
models/: BirthModel.py  EHRTransform.py  Predictor.py  Transform.py  ehr_models.py
preprocessing/: Combine_csvs.py  calc_stats.py  combine_cervix_preds_and_db.py  combine_csvs.py  combine_data_and_cervix_preds.py  database_crawler_multiprocessing.py  extract_img_paths.py  inclusion_exclusion.py  link_csv_and_db.py  link_csv_and_db_Jacob-PC_Mar-01-173727-2026_Conflict.py  link_csv_and_db_multiprocess.py  (+7 more)
ultradino-finetune-main/: .gitignore  README.md  conda.yml  pyproject.toml
ultradino-finetune-main/examples/: load_pretrained_ultradino.py
ultradino-finetune-main/src/ultradino_finetune/models/: __init__.py
ultradino-finetune-main/src/ultradino_finetune/models/dinov2/: load.py
ultradino-finetune-main/src/ultradino_finetune/models/dinov2/layers/: block.py
ultradino-finetune-main/src/ultradino_finetune/models/dinov2/models/: vision_transformer.py
ultradino-finetune-main/src/ultradino_finetune/models/dinov2/utils/: __init__.py  param_groups.py
ultradino-finetune-main/tests/: conftest.py  test_models_dinov2.py
(+72 files in other folders)
