[project]

name = 'ultradino_finetune'
description = 'Finetuning of UltraDINO models'
readme = 'README.md'

version = '0.1.0'

authors = [
  {name = 'Benjamin Jønch Jürgensen'},
  {name = 'Jakob Ambsdorf'},
]

requires-python = '>= 3.12' # Some prospective production environments require 3.12
dependencies = [
  'torch',
  'numpy',
]

[project.optional-dependencies]

dev = [
  'pytest',
  'ipython',
]

[build-system]

requires = ['setuptools >= 77.0.3']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]

addopts = [
  '--import-mode=importlib',
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
line-ending = "auto"
